--- a/JM0ney.Framework.csproj
+++ b/JM0ney.Framework.csproj
@@ -42,18 +42,44 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigurationHelper.cs" />
+    <Compile Include="Localization\ConfigurationHelper\ErrorMessages.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ErrorMessages.resx</DependentUpon>
+    </Compile>
     <Compile Include="ExceptionHelper.cs" />
     <Compile Include="IResult.cs" />
     <Compile Include="ITypedResult.cs" />
+    <Compile Include="Localization\ErrorMessages.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ErrorMessages.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Localization\Messages.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Messages.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result%28TResult%29.cs" />
     <Compile Include="Result.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\JM0ney.Localization\JM0ney.Localization.csproj">
-      <Project>{79ee40ac-f654-4faf-bdea-82e88a9f5813}</Project>
-      <Name>JM0ney.Localization</Name>
-    </ProjectReference>
+    <EmbeddedResource Include="Localization\ConfigurationHelper\ErrorMessages.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ErrorMessages.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>JM0ney.Framework.Localization.ConfigurationHelper</CustomToolNamespace>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Localization\ErrorMessages.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ErrorMessages.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>JM0ney.Framework.Localization</CustomToolNamespace>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Localization\Messages.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>JM0ney.Framework.Localization</CustomToolNamespace>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
